<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_16"
    tools:context=".Settings">

    <TextView
        android:id="@+id/selectFolderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_folder_location"
        android:layout_marginTop="@dimen/dimen_16"
        android:textSize="@dimen/text_16"
        app:layout_constraintTop_toTopOf="parent" />
    <Spinner
        android:id="@+id/selectFolderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select_folder_for_images"
        app:layout_constraintTop_toBottomOf="@+id/selectFolderLabel"
        android:minHeight="@dimen/dimen_48"
        android:layout_marginTop="@dimen/dimen_6"/>

    <TextView
        android:id="@+id/statusBarColorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_status_color"
        android:layout_marginTop="@dimen/dimen_16"
        android:textSize="@dimen/text_16"
        app:layout_constraintTop_toBottomOf="@+id/selectFolderSpinner" />
    <Spinner
        android:id="@+id/statusBarColorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6"
        android:contentDescription="@string/select_color_for_status"
        android:minHeight="@dimen/dimen_48"
        app:layout_constraintTop_toBottomOf="@+id/statusBarColorLabel"/>

    <TextView
        android:id="@+id/actionBarColorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_action_color"
        android:layout_marginTop="@dimen/dimen_16"
        android:textSize="@dimen/text_16"
        app:layout_constraintTop_toBottomOf="@+id/statusBarColorSpinner" />
    <Spinner
        android:id="@+id/actionBarColorSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_6"
        android:contentDescription="@string/select_color_for_action"
        android:minHeight="@dimen/dimen_48"
        app:layout_constraintTop_toBottomOf="@+id/actionBarColorLabel"/>

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="@dimen/dimen_320"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>